5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1590_2895.log
== SUBMITION (2019-03-20 15:00:07) 
-- CODE:
X=float(input("Quantidade de jogos:"))
total= (x*8)+45
-- EXECUTION TIME:
0.121632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 2, in <module>
    total= (x*8)+45
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:03:14) 
-- CODE:
X=float(input("Quantidade de jogos:"))
y=8 #Valor Unitario dos Jogos
z= x*y #total de jogos
total= z+45 #Jogos+frete
print(total)
-- EXECUTION TIME:
0.211633
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 3, in <module>
    z= x*y #total de jogos
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:03:17) 
-- CODE:
X=float(input("Quantidade de jogos:"))
y=8 #Valor Unitario dos Jogos
z= x*y #total de jogos
total= z+45 #Jogos+frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= x*y #total de jogos
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:03:46) 
-- CODE:
x=float(input("Quantidade de jogos:"))
y=8 #Valor Unitario dos Jogos
z= x*y #total de jogos
total= z+45 #Jogos+frete
print(total)
-- OUTPUT:
141.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:03:56) 
-- CODE:
x=float(input("Quantidade de jogos:"))
y=8 #Valor Unitario dos Jogos
z= x*y #total de jogos
total= z+45 #Jogos+frete
print(total)
-- EXECUTION TIME:
0.211052
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
141.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
125.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2013.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:04:25) 
-- CODE:
x=float(input("Quantidade de jogos:"))
y=8 #Valor Unitario dos Jogos
z= x*y #total de jogos
total= z+45 #Jogos+frete
print(x)
print(z)
print(total)
-- EXECUTION TIME:
0.136191
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
12.0
96.0
141.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
10.0
80.0
125.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
246.0
1968.0
2013.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:04:28) 
-- CODE:
x=float(input("Quantidade de jogos:"))
y=8 #Valor Unitario dos Jogos
z= x*y #total de jogos
total= z+45 #Jogos+frete
print(x)
print(z)
print(total)
-- OUTPUT:
12.0
96.0
141.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:06:52) 
-- CODE:
x=float(input("Quantidade de jogos:"))
y=8 #Valor Unitario dos Jogos
z= x*y #total de jogos
total= z+45 #Jogos+frete
print(x)
print(y)
print(total)
-- EXECUTION TIME:
0.279869
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
12.0
8
141.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
10.0
8
125.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
246.0
8
2013.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:09:01) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") #Valor Unitario dos Jogos
z=8
print(x)
print(y)
print(z,"frete")
-- EXECUTION TIME:
0.19328
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 3
    z=8
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:09:03) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") #Valor Unitario dos Jogos
z=8
print(x)
print(y)
print(z,"frete")
-- ERROR:
File "XXXX", line 3
    z=8
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:09:06) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") #Valor Unitario dos Jogos
z=8
print(x)
print(y)
print(z,"frete")
-- ERROR:
File "XXXX", line 3
    z=8
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:09:46) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") #Valor Unitario dos Jogos
z=int(input("valor do frete"))
print(x)
print(y)
print(z,"frete")
-- ERROR:
File "XXXX", line 3
    z=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:10:03) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") #Valor Unitario dos Jogos
z=int(input("valor do frete"))
print(x)
print(y)
print(z)
-- ERROR:
File "XXXX", line 3
    z=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:10:26) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") #Valor Unitario dos Jogos
z=float(input())
print(x)
print(y)
print(z)
-- ERROR:
File "XXXX", line 3
    z=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:11:50) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") #Valor Unitario dos Jogos
total= (x*y)*8		  
		 
print(x)
print(y)
print(z)
-- ERROR:
File "XXXX", line 3
    total= (x*y)*8		  
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:12:05) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") #Valor Unitario dos Jogos
total=(x*y)*8		  
		 
print(x)
print(y)
print(total)
-- ERROR:
File "XXXX", line 3
    total=(x*y)*8		  
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:13:14) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") #Valor Unitario dos Jogo
total=(x*y)+45		  
print(total)
-- ERROR:
File "XXXX", line 3
    total=(x*y)+45		  
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:13:42) 
-- CODE:
x=float(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") #Valor Unitario dos Jogo
total=x*y+45		  
print(total)
-- ERROR:
File "XXXX", line 3
    total=x*y+45		  
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:16:30) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") #Valor Unitario dos Jogo
z=	float(input("frete"))	  
total= (x*y)+z
-- ERROR:
File "XXXX", line 3
    z=	float(input())	  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:16:37) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") #Valor Unitario dos Jogo
z=float(input("frete"))	  
total= (x*y)+z
-- ERROR:
File "XXXX", line 3
    z=float(input())	  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:17:13) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") 
z=float(input("frete"))	  
total=(x*y)+z
print(total)		  
-- ERROR:
File "XXXX", line 3
    z=float(input())	  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:19:14) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") 
z=float(input("frete"))	  
total=(x*y)+z
print(x)
print(y)
print(z)		  
print(total)		  
-- ERROR:
File "XXXX", line 3
    z=float(input())	  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:19:27) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") 
z=float(input("frete"))	  
total=(x*y)+z	  
print(total)		  
-- ERROR:
File "XXXX", line 3
    z=float(input())	  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:22:04) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") 
z=float(input("frete:"))	  
total=(x*y)+z	  
print(total)		  
-- ERROR:
File "XXXX", line 3
    z=float(input())	  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:22:21) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") 
z=float(input("frete"))	  
total=(x*y)+z	  
print(total)		  
-- ERROR:
File "XXXX", line 3
    z=float(input())	  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:22:52) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") 
z=float(input("frete"))	  
total=(x*y)+z	  
print(total)		  
-- ERROR:
File "XXXX", line 3
    z=float(input())	  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:23:24) 
-- CODE:
x=int(input("Quantidade de jogos:"))
y=float(input("Valor Unitario:") 
z= float(input("frete"))	  
total=(x*y)+z	  
print(total)		  
-- ERROR:
File "XXXX", line 3
    z= float(input())	  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:25:00) 
-- CODE:
var1=int(input("Quantidade de jogos:"))
var2=float(input("Valor Unitario:") 
var3=float(input("frete"))	  
total=(var1*var2)+var3	  
print(total)		  
-- ERROR:
File "XXXX", line 3
    var3=float(input())	  
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:25:14) 
-- CODE:
var1=int(input("Quantidade de jogos:"))
var2=float(input("Valor Unitario:") 
var3=float(input())	  
total=(var1*var2)+var3	  
print(total)		  
-- ERROR:
File "XXXX", line 3
    var3=float(input())	  
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:25:39) 
-- CODE:
var1=int(input("Quantidade de jogos:"))
var2=float(input("Valor Unitario:") 
var3=int(input("frete"))	  
total=(var1*var2)+var3	  
print(total)		  
-- ERROR:
File "XXXX", line 3
    var3=int(input())	  
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:08) 
-- CODE:
var1=int(input("Quantidade de jogos:"))
var2=float(input("Valor Unitario:") 
var3=float(input("frete"))	  
total=(var1*var2)+var3	  
print(total)		  
-- ERROR:
File "XXXX", line 3
    var3=float(input())	  
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:38) 
-- CODE:
var1=int(input("Quantidade de jogos:"))
var2=float(input("Valor Unitario:") 
var3=float(input("frete:"))	  
total=(var1*var2)+var3	  
print(total)		  
-- ERROR:
File "XXXX", line 3
    var3=float(input())	  
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:28:09) 
-- CODE:
var1=int(input("Quantidade de jogos:"))
var2=float(input("Valor Unitario:"))
var3=float(input("frete:"))	  
total=(var1*var2)+var3	  
print(total)		  
-- EXECUTION TIME:
0.134298
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:18:19) 
-- CODE:
var1=int(input("Quantidade de jogos:"))
var2=float(input("Valor Unitario:"))
var3=float(input("frete:"))	  
total=(var1*var2)+var3	  
print(total)		  
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
